--- a/src/stylesheets/components/_navprimary.scss
+++ b/src/stylesheets/components/_navprimary.scss
@@ -104,8 +104,9 @@
   }
 
   @include media($medium-screen) {
-    top: -110px;
-    left: -10px;
+    top: 8px;
+    //top: -110px;
+    //left: -10px;
     //top: 6px;
   }
 }
